k8s/app/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dashboard
  namespace: soc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-dashboard
  template:
    metadata:
      labels:
        app: flask-dashboard
    spec:
      containers:
      - name: flask
        image: yourusername/soc-dashboard:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests: { cpu: "100m", memory: "128Mi" }
          limits: { cpu: "500m", memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: soc-app
spec:
  selector:
    app: flask-dashboard
  ports:
  - port: 5000
    targetPort: 5000
